# GitScanner

./: .gitignore  Readme.md  github_repos.txt  gitlab_repos.txt  main.py  pyproject.toml  repo_list.py  repos.txt
.junie/: AGENTS.md
prompts/: Story 10 Karate tests scanning.md  Story 11 Classify API dependencies.md  Story 12 Support custom gitlab url.md  Story 13 Cleanup architecture.md  Story 14 Cleanup Unit tests.md  Story 15 Archetype report.md  Story 15.5 Cleanup Legacy Code.md  Story 15.6 Report on scans over time.md  Story 16 System of improvement.md  Story 17 Kafka discovery for Spring Cloud Stream.md  Story 18 Report Controllers and Dependency Types.md  Story 3 Unit Test.md  Story 4 GitLab support.md  Story 4.5 Refactor to Data Class.md  Story 4.6 Refactor to SqlLite.md  Story 5 Count and collect endpoints.md  Story 6 Better error messages.md  Story 7 Http status 200 but Api Url is wrong.md  Story 8 Collect Endpoint information.md  Story 9 Collect Endpoint Parameter information  Story2.md
reporting/: archetype_report.sql  test_archetype_fixture.sql
sql_reports/: controllers_report.sql  scanner_findings_report.sql  test_controllers_report_fixture.sql  test_scanner_difficulty_findings_fixture.sql  test_trends_over_time_fixture.sql  trends_over_time.sql
tests/: test_architecture_guards.py  test_cli_count_spring_controllers.py  test_compat_count_spring_controllers.py  test_core_git.py  test_core_repository.py  test_core_scan_runner.py  test_core_scanner_contract.py  test_count_spring_controllers.py  test_kafka_discovery.py  test_karate_scanners.py  (+7 more)
(+27 files in other folders)
