[project]
name = "gitscanner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.5",
]

[project.scripts]
list_repos = "gitscanner.list_repos:main"
count_spring_controllers = "gitscanner.count_spring_controllers:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
]

# A build system must be defined in order for UV to install the project.scripts into the environment.
# Hatchling is one of the many tools that can create a package for this project so project.scripts
# can be installed.
# This is necessary for the convenience of `uv run xyz`. Otherwise skip it.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"